--- a/react_fe/index.html
+++ b/react_fe/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <!-- <link rel="shortcut icon" type="image/png" href="/static/img/favicon.png" /> -->
-    <title>React</title>
+    <title>India Health Care</title>
     <base href="/" />
   </head>
   <body>
